# ctts

./: .design.md.swp  .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  api.md  client.go  cron.yaml  deriver.go  deriver_test.go  docker-compose.yml  env.go  generate-stubs.sh  get_sky_brightness_at_known_sites.py  get_sky_brightness_at_nearest_astro_twilight.py  go.mod  go.sum  main.go  main_test.go  model.pth  predict.md  predict.sh  predict_sky_brightness.py  predict_sky_brightness_at_sites.py  read.go  requirements.txt  routes.go  row.go  row.pb.go  row.proto  rowgen.go  service.pb.go  service.proto  service_grpc.pb.go  site.go  site_test.go  sync-open-meteo-data.sh  update-open-meteo-data.sh  update-open-meteo.sh  (+2 more)
api/: .dockerignore  Dockerfile  README.md  model.md  pyproject.toml  requirements.txt
api/api/: config.py  main.py  models.py
api/api/data/: data.md
api/api/model/: __init__.py  build.py  config.toml  train.py
api/api/prediction/: config.py  constants.py  open_meteo_client.py  prediction.py  utils.py
api/api/service/: __init__.py  brightness_servicer.py  config.toml  constants.py  model.pth  observer_site.py
api/api/stubs/: brightness_service_pb2.py  brightness_service_pb2_grpc.py
api/api/tests/: test_pollution_api.py  test_prediction_api.py
api/app/: config.py  main.py
api/app/internal/: cell.py  model.json  model.pth  model.py  open_meteo.py  region.py
api/app/routers/: geojson.py  (+1 more)
api/model/: train.py
api/pollution/: pollution.py
api/prediction/: open_meteo_client.py  prediction.py
api/tests/: test_api.py
(+193 files in other folders)
