[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroplan>=0.10.1",
    "astropy>=7.0.1",
    "fastapi[standard]>=0.115.11",
    "h3>=4.2.1",
    "numpy~=1.26.4",
    "requests>=2.32.3",
    "torch~=2.2.2",
]
